added new thing in funck

--- a/funck.html
+++ b/funck.html
@@ -1,3 +1,7 @@
 <html>funck
-    
+    skdfjhdsjfdkjfhajfdskjfdhsfkldsfhdkjfh
+    sfkjdafkhjdambfsjfnooejfleshfkse
+    adkjqhldjqpofowejf
+    fmkdsvksdjsd
+    sdkkdalkslfsdf
 </html>
